corrected the responsiveness of the CTA bar on mobile

--- a/src/assets/scss/layout/_cta.scss
+++ b/src/assets/scss/layout/_cta.scss
@@ -4,76 +4,98 @@
 /*  10. cta CSS START
 /*----------------------------------------*/
 
-.cta{
-    &__plr{
-        margin:0 200px;
-        @media #{$xxxl}{
-            margin:0 100px;
+.cta {
+    &__plr {
+        margin: 0 200px;
+
+        @media #{$xxxl} {
+            margin: 0 100px;
         }
-        @media #{$xxl}{
-            margin:0 100px;
+
+        @media #{$xxl} {
+            margin: 0 100px;
         }
-        @media #{$xl,$lg,$md}{
+
+        @media #{$xl,$lg,$md} {
             margin: 0 30px;
         }
-        @media #{$xs}{
+
+        @media #{$xs} {
             margin: 0;
-        } 
+        }
+
+        @media #{$xxs} {
+            padding: -50px;
+        }
     }
-    &__bg{
+
+    &__bg {
         background-size: cover;
         background-repeat: no-repeat;
         background-position: bottom;
         border-radius: 100px;
         margin-bottom: -165px;
         padding: 1px;
-        @media #{$xs}{
+
+        @media #{$xs} {
             padding: 50px 30px;
             border-radius: 0;
-        } 
-        @media #{$xxs}{
+            }
+            
+            @media #{$xxs} {
+            border-radius: 0;
+
             padding: 1px 15px;
-        } 
+        }
     }
-    &__title{
+
+    &__title {
         font-size: 35px;
         font-weight: 700;
         color: var(--it-common-black) !important;
         padding-bottom: 15px;
-        @media #{$md}{
+
+        @media #{$md} {
             font-size: 27px;
         }
-        @media #{$xs}{
+
+        @media #{$xs} {
             font-size: 25px;
         }
     }
-    &__section-box{
-        & p{
+
+    &__section-box {
+        & p {
             padding-bottom: 15px;
             color: black !important;
-            @media #{$xs}{
+
+            @media #{$xs} {
                 font-size: 14px;
-                & br{
+
+                & br {
                     display: none;
                 }
             }
         }
     }
-    &__shape-icon{
+
+    &__shape-icon {
         position: absolute;
         top: -76px;
         left: 50%;
         transform: translateX(-50%);
     }
-    &__btn{
-        & .white-btn{
-            @media #{$md}{
+
+    &__btn {
+        & .white-btn {
+            @media #{$md} {
                 height: 47px;
                 line-height: 49px;
                 padding: 0 30px;
                 font-size: 16px;
             }
-            @media #{$xs}{
+
+            @media #{$xs} {
                 height: 47px;
                 line-height: 49px;
                 padding: 0 30px;
@@ -81,33 +103,65 @@
             }
         }
     }
+
     &__section-wrapper {
 
         padding-top: 0px;
         width: 70%;
-        
-        @media #{$md,$xs}{
+
+        @media #{$md,$xs} {
             padding-top: 0;
         }
-        @media #{$sm}{
+
+        @media #{$sm} {
             padding-top: 0;
         }
     }
 }
-.cta{
-    &__bg-2{
+
+.cta {
+    &__bg-2 {
         border-radius: 40px;
-        @media #{$md}{
+
+        @media #{$md} {
             padding: 20px;
+        }
+
+        @media #{$xs} {
+            border-radius: 0px;
+        }
+
+        @media #{$xxs} {
+            border-radius: 0px;
         }
     }
 }
 
 .cta__section-box {
-    @media #{$md}{
+    @media #{$md} {
         margin-top: 30px;
     }
 }
+
+.cta-maintain {
+    @media #{$md} {
+
+        margin: -59px 0px;
+    }
+
+    @media #{$xs} {
+
+        margin: -125px 0px;
+
+    }
+
+    @media #{$xxs} {
+
+        margin: -80px 0px;
+
+    }
+}
+
 // .cta__area::before {
 //     content: "";
 //     position: absolute;
